# vita-assimp-sample

./: CMakeLists.txt  README.md
shaders/: shader.frag  shader.vert
src/: main.cpp
